Fix home layout bug

--- a/src/stylesheets/modules/home/_mod-frame1.scss
+++ b/src/stylesheets/modules/home/_mod-frame1.scss
@@ -124,7 +124,7 @@
     left: -105px;
     top: 18%;
     max-width: none;
-    width: 71%;
+    width: 67%;
   }
 }
 @media screen and (min-width: 1200px) and (min-height: 1080px) {
